@startuml d16_sum_rollup
!include _style.puml
title d16_sum_rollup — D3 + parent sums only; count and extrema derived on reads
entity charity {
  total_donated_cents : BIGINT <<sum>>
  * charity_id : BIGINT <<PK>>
}
entity person {
  total_donated_cents : BIGINT <<sum>>
  * person_id : BIGINT <<PK>>
  * charity_id : BIGINT <<FK>>
}
entity donation {
  * donation_id : BIGINT <<PK>>
  * person_id : BIGINT <<FK>>
  * charity_id : BIGINT <<FK, copied>>
  * amount_cents : BIGINT
  * donated_at : TIMESTAMPTZ
}
charity ||--o{ person
person ||--o{ donation
charity ||..o{ donation
note bottom of donation
  D3 + parent sums only; count and extrema derived on reads
  See ENHANCEMENTS.md for the controlled pair.
  Plans, not index names, establish heap fetches.
end note
@enduml
